[tool.poetry]
name = "ntfsfind"
version = "2.4.0"
description = "A tool for search paths from an NTFS volume on an image file."
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "LGPLv3+"
readme = "README.md"

repository = "https://github.com/sumeshi/ntfsfind"
homepage = "https://github.com/sumeshi/ntfsfind"

keywords = ['Windows']

[tool.poetry.scripts]
ntfsfind = 'ntfsfind:entry_point'

[tool.poetry.dependencies]
python = "^3.9"
ntfsdump = "==2.4.0"
mft = "^0.5.6"
pytsk3 = "^20211111"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.940"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
