[tool.poetry]
name = "ntfsfind"
version = "2.5.0"
description = "An efficient tool for search files, directories, and alternate data streams directly from NTFS image files."
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "LGPLv3+"
readme = "README.md"

repository = "https://github.com/sumeshi/ntfsfind"
homepage = "https://github.com/sumeshi/ntfsfind"

keywords = ['Security', 'Forensics', 'DFIR', 'Windows', 'NTFS']

[tool.poetry.scripts]
ntfsfind = 'ntfsfind:entry_point'

[tool.poetry.dependencies]
python = "^3.11"
ntfsdump = "^2.5.3"
mft = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
nuitka = "1.7.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
