[project]
name = "ntfsfind"
dynamic = ["version"]
description = "An efficient tool for search files, directories, and alternate data streams directly from NTFS image files."
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "ntfsdump>=3.0.3",
    "mft>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ntfsfind/__about__.py"

[project.urls]
Homepage = "https://github.com/sumeshi/ntfsfind"
Repository = "https://github.com/sumeshi/ntfsfind"

[dependency-groups]
dev = [
    "black",
    "mypy",
    "flake8",
    "pytest",
    "nuitka",
    "zstandard>=0.25.0",
]

[project.scripts]
ntfsfind = 'ntfsfind.cli:main'
